change color when 'hovering', add size change button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+  <header>
+    <button class="button button--size">Change size</button>
+  </header>
   <main></main>
   <footer>
     <a href="credits.html">Credits</a>
