add random and taint coloring modes

--- a/credits.html
+++ b/credits.html
@@ -1,1 +1,13 @@
-<a href="https://www.flaticon.com/free-icons/etch-a-sketch" title="Etch a sketch icons">Etch a sketch icons created by Smashicons - Flaticon</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="img/favicon.png">
+  <link rel="stylesheet" href="style.css">
+  <title>Credits</title>
+</head>
+<body>
+  <a href="https://www.flaticon.com/free-icons/etch-a-sketch" title="Etch a sketch icons">Etch a sketch icons created by Smashicons - Flaticon</a>
+</body>
+</html>
