--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 
 <body>
   <header>
+    <h1>Etch A Sketch</h1>
     <button class="button button--size">Change size</button>
+    <select name="draw">
+      <option value="black">Black</option>
+      <option value="colorful">Colorful</option>
+      <option value="taint">Taint</option>
+    </select>
   </header>
   <main></main>
   <footer>
