--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <h1>Etch A Sketch</h1>
-    <button class="button button--size">Change size</button>
+    <button>Change size</button>
     <select name="draw">
       <option value="black">Black</option>
       <option value="colorful">Colorful</option>
